miners: Port JS proxy code to GDBus

Make both miners use the same interface so that we can generalize
the code a bit better.

https://bugzilla.gnome.org/show_bug.cgi?id=680219